split game logic into server.js and created placeholder 'client.js'. 'client.js' has no real functionality yet.

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
         <meta charset="utf-8">
 
         <title>Kessel Sabacc</title>
@@ -182,6 +183,6 @@
             </div>
         </div>
 
-        <script type="module" src="sabacc.js"></script>
+        <script type="module" src="client.js"></script>
     </body>
 </html>
